syntax="proto3";

package push.meta;

option go_package="meta";

import "common.proto";

service Session{
	rpc Online(SessionOnlineRequest)returns (SessionOnlineResponse);
	rpc Update(SessionUpdateRequest)returns (SessionUpdateResponse);
	rpc Offline(SessionOfflineRequest)returns (SessionOfflineResponse);
	rpc Info(SessionInfoRequest)returns (SessionInfoResponse);
}

message SessionOnlineRequest{
	RequestHeader header = 1;
	string GateServerIP = 2;
	string GateServerPort = 3;
	string AppId = 4;
	string ClientId = 5;
	string Platform = 6;
	uint64 CreatedAt = 7;
}
message SessionOnlineResponse{
	ResponseHeader header = 1;
}

message SessionOfflineRequest{
	RequestHeader header = 1;
	string AppId = 2;
	string ClientId = 3;
}
message SessionOfflineResponse{
	ResponseHeader header = 1;
}

message SessionUpdateRequest{
	RequestHeader header = 1;
	string GateServerIP = 2;
	string GateServerPort = 3;
	string AppId = 4;
	string ClientId = 5;
	string Platform = 6;
	uint64 UpdatedAt = 7;
}
message SessionUpdateResponse{
	ResponseHeader header = 1;
}

message SessionInfoRequest{
	RequestHeader header = 1;
	string AppId = 2;
	string ClientId = 3;
}
message SessionInfoResponse{
	ResponseHeader header = 1;
	string GateServerIP = 2;
	string GateServerPort = 3;
	string AppId = 4;
	string ClientId = 5;
	string Platform = 6;
	uint64 Status = 7;
	uint64 CreatedAt = 8;
	uint64 UpdatedAt=9;
}
