syntax="proto3";

package push.pb;

option go_package = "pb";

import "common.proto";

service Gate{
	rpc Push(GatePushRequest)returns (GatePushResponse);
	rpc PushAll(GatePushAllRequest)returns (GatePushAllResponse);
}

message GatePushRequest{
	string ID = 1;
	string AppID = 2;
	string RegID = 3;
	string Content = 4;
	int32  Kind =5;
	string Extra = 6;
}

message GatePushResponse{
	ResponseHeader Header = 1;
}

message GatePushAllRequest{
	string ID = 1;
	string AppID = 2;
	string Content = 4;
	int32 Kind =5;
	string Extra = 6;
}

message GatePushAllResponse{
	ResponseHeader Header = 1;
}
